--- a/app/views/products/_cart_item.html.haml
+++ b/app/views/products/_cart_item.html.haml
@@ -1,11 +1,12 @@
 %li.product
-  %img.product-image{:src=>cart_item.images.first.image.url(:small)}
+  = link_to image_tag("#{cart_item.images.first.image.url(:small)}", :class => "product-image", :alt => "#{cart_item.name}"), cart_item
   %span.product-title
-    = cart_item.name
-  %span.product-price
-    = "Price: $%d" % cart_item.price
-  %span.product-shipping
-    Shipping: $4.99
+    = link_to cart_item.name, cart_item
+    -if cart_item.sale_price
+      %span.regular-price= "Price: #{number_to_currency(cart_item.price)}"
+      %span.sale-price.product-price= "Sale Price: #{number_to_currency(cart_item.sale_price)}"
+    -else
+      %span.product-price= "Price: #{number_to_currency(cart_item.price)}"
   %br
-  -if @cms_config["site_settings"]["google_merchant_id"] != ""
-    %div.googlecart-add-button{:role=>"button", :alt=>"Add to cart", :tabindex=>"0"}
+  -if @cms_config["site_settings"]["google_merchant_id"]
+    %div.googlecart-add-button{:role=>"button", :alt=>"Add to cart", :tabindex=>"0", :style => "position: relative;"}
