--- a/app/views/admin/products/_form.html.erb
+++ b/app/views/admin/products/_form.html.erb
@@ -35,9 +35,9 @@
     </td>
   </tr>
   <tr>
-    <td>Weight:(required for shipping unless flat-rate or free shipping is offered)</td>
+    <td>Weight:(required for carrier-calculated shipping options)</td>
     <td>
-      $<%= f.text_field :weight, :size => 10 %>
+      <%= f.text_field :weight, :size => 10 %>lbs
     </td>
   </tr>
   <tr>
