--- a/app/views/products/_cart_item.html.haml
+++ b/app/views/products/_cart_item.html.haml
@@ -8,7 +8,7 @@
     -else
       %span.product-price= "Price: #{number_to_currency(cart_item.price)}"
     -if cart_item.weight
-      %input.product-weight{:type=>"hidden", :value=>"#{cart_item.weight}"
+      %input.product-weight{:type=>"hidden", :value=>"#{cart_item.weight}"}
   %br
   -if @cms_config["site_settings"]["google_merchant_id"]
     %div.googlecart-add-button{:role=>"button", :alt=>"Add to cart", :tabindex=>"0", :style => "position: relative;"}
