--- a/app/views/products/_cart_item.html.haml
+++ b/app/views/products/_cart_item.html.haml
@@ -1,5 +1,6 @@
 %li.product
-  = link_to image_tag("#{cart_item.images.first.image.url(:small)}", :class => "product-image", :alt => "#{cart_item.name}"), cart_item
+  -if cart_item.images.any?
+    = link_to image_tag("#{cart_item.images.first.image.url(:small)}", :class => "product-image", :alt => "#{cart_item.name}"), cart_item
   %span.product-title
     = link_to cart_item.name, cart_item
     -if cart_item.sale_price
