--- a/app/views/products/index.html.haml
+++ b/app/views/products/index.html.haml
@@ -2,5 +2,5 @@
 %ul
   =render :partial => "cart_item", :collection => @products
   = cycle("", "", "<li class=\"clear\"></li>")
--if @cms_config["site_settings"]["google_merchant_id"] != "" 
+-if @cms_config["site_settings"]["google_merchant_id"]
   %script#googlecart-script{:type=>"text/javascript", :src=>"http://checkout.google.com/seller/gsc/v2/cart.js?mid=#{CMS_CONFIG["site_settings"]["google_merchant_id"]}", :currency=>"USD"}
