--- a/app/views/products/_cart_item.html.haml
+++ b/app/views/products/_cart_item.html.haml
@@ -2,7 +2,7 @@
   -if cart_item.images.any?
     = link_to image_tag("#{cart_item.images.first.image.url(:small)}", :class => "product-image", :alt => "#{cart_item.name}"), cart_item
   %span.product-title
-    = link_to cart_item.name, cart_item
+    = link_to cart_item.name[0...15] + "...", cart_item
     -if cart_item.sale_price
       %span.regular-price= "Price: #{number_to_currency(cart_item.price)}"
       %span.sale-price.product-price= "Sale Price: #{number_to_currency(cart_item.sale_price)}"
