--- a/app/views/admin/products/index.html.erb
+++ b/app/views/admin/products/index.html.erb
@@ -43,7 +43,7 @@
       <td class="center">
         <%- if current_user.has_role(["Admin", "Editor"]) %>
           <%- if p.images.any? %>
-            <%- if p.features.any? > 0 %>
+            <%- if p.features.any? %>
               <%= defeature_icon(p, "/admin/products/#{p.to_param}/features/1", p.title, "inline") %>
               <%= feature_icon(p, [:admin, p, :features], p.title, "none") %>
             <%-else %>
