--- a/app/views/products/index.html.haml
+++ b/app/views/products/index.html.haml
@@ -1,6 +1,7 @@
-%h1 Products
-%ul
-  =render :partial => "cart_item", :collection => @products
-  = cycle("", "", "<li class=\"clear\"></li>")
--if @cms_config["site_settings"]["google_merchant_id"]
-  %script#googlecart-script{:type=>"text/javascript", :src=>"http://checkout.google.com/seller/gsc/v2/cart.js?mid=#{CMS_CONFIG["site_settings"]["google_merchant_id"]}", :currency=>"USD"}
+- content_for(:meta_title) { concat "Store" }
+
+= render :partial => "sidecolumn2"
+%h1
+  Products
+%ul.product-list
+  =render :partial => "product", :collection => @products
