--- a/app/views/admin/products/_form.html.haml
+++ b/app/views/admin/products/_form.html.haml
@@ -37,6 +37,10 @@
       = f.check_box :featured
       = f.label :featured, "Feature on main products page."
   %tr
+    %td{ :colspan => "2" }
+      = f.check_box :display_add_cart
+      = f.label :display_add_cart, "Display add to cart button."
+  %tr
     %td
       Add to Cart Code:
     %td
