--- a/app/views/product_categories/show.html.haml
+++ b/app/views/product_categories/show.html.haml
@@ -6,7 +6,5 @@
 %h1= @productcategory.name
 = @productcategory.body
 %ul.product-list
-  - for p in @productcategory.products
-    %li.product
-      = render :partial => "/products/product", :locals => { :product => p }
-      = cycle("", "", "<li class=\"clear\"></li>")
+  -@productcategory.products.each do |p|
+    = render :partial => "/products/product", :locals => { :product => p }
