--- a/app/views/admin/products/_form.html.haml
+++ b/app/views/admin/products/_form.html.haml
@@ -1,78 +1,60 @@
 - content_for :head do
   %style{ :type => "text/css" }
-    .product-category-cell div {display:block; overflow: auto; width: 100%; height: 200px; font-size: .85em; }
-    .product-category-cell ul{list-style: none; margin: 0; padding: 0 0 5px 10px;}
 = error_messages_for "product"
-%table{ :cellspacing => "0" }
-  %tr
-    %td
-      Name:
-    %td
-      = f.text_field :name, :class => "big"
-  %tr
-    %td
-      Size:
-    %td
-      = f.text_field :size, :size => 10
-      %span.gray
-        optional
-  %tr
-    %td
+%fieldset
+  %dl
+    %dt.form-label
+      Title:
+    %dd.form-option
+      = f.text_field :title, :class => "big"
+    %dt.form-label
       Product SKU:
-    %td
-      = f.text_field :sku, :size => 10
-  %tr
-    %td
-      Price:
-    %td
-      $
-      = f.text_field :price, :size => 10
-      \&nbsp;&nbsp;&nbsp;
-      Sale price: $
-      = f.text_field :sale_price, :size => 10
-      %span.gray
-        optional
-  %tr
-    %td{ :colspan => "2" }
-      = f.check_box :featured
+    %dd.form-option
+      = f.text_field :sku
+    %dt.form-label
       = f.label :featured, "Feature on main products page."
-  %tr
-    %td{ :colspan => "2" }
-      = f.check_box :display_add_cart
+    %dd.form-option
+      = f.check_box :featured
+    %dt.form-label
       = f.label :display_add_cart, "Display add to cart button."
-  %tr
-    %td
+    %dd.form-option
+      = f.check_box :display_add_cart
+    %dt.form-label
       Add to Cart Code:
-    %td
+    %dd.form-option
       = f.text_area :cart_code, :size => "50x5"
       %p.small.gray
         If you are using a third party shopping cart, paste the generated "Add to Cart" code here.
-  - unless @product_categories.empty?
-    %tr
-      %td
+    %dt.form-label
+      .product_options{:id => "product_options"}
+        Product Options
+        -if !@product.product_options.empty?
+          = render :partial => 'product_option', :collection => @product.product_options 
+        -else
+          = render :partial => 'product_option', :object => @product.product_options.build
+        = add_product_option_link "Add option"
+    - unless @product_categories.empty?
+      %dt.form-label
         Product Category:
-      %td.product-category-cell
-        %div
-          - build_form_children(nil, @product)  
-    %tr
-      %td{ :colspan => "2" }
+      %dd.form-option
+        - build_form_children(nil, @product)  
+      %dt.form-label
         Description:
-        %br
+      %dd.form-option
         = f.text_area :description, :class => "mceEditor", :size => "70x30"
-    %tr
-      %td{ :colspan => "2" }
-        - fancy_submit admin_products_path do
-          = f.submit "Save Product"
+
+  - fancy_submit admin_products_path do
+    = f.submit "Save Product"
       
-.form-option
-  %h2
-    Related Products
-  - @products.each do |p|
-    %div
-      = check_box_tag "product[related_product_ids][]", p.id, @product.related_products.include?(p), :id => dom_id(p)
-    %label{ :for => dom_id(p) }
-      = h p.name.titleize
-  
-- fancy_submit admin_products_path do
-  = f.submit "Save Product"
+  .form-option
+    %h2
+      Related Products
+    - @products.each do |p|
+      %div
+        = check_box_tag "product[related_product_ids][]", p.id, @product.related_products.include?(p), :id => dom_id(p)
+      %label{ :for => dom_id(p) }
+        = h p.name.titleize
+        
+  - fancy_submit admin_products_path do
+    = f.submit "Save Product"
 
