--- a/app/views/products/index.html.haml
+++ b/app/views/products/index.html.haml
@@ -1,7 +1,11 @@
 - content_for(:meta_title) { concat "Store" }
-
+/ Add google cart here if needed
+-if @cms_config["site_settings"]["google_merchant_id"]
+  /Add this line to the script tag to enable sandbox testing
+  - content_for :footer do
+    ==<script id="googlecart-script" type="text/javascript" src="http://checkout.google.com/seller/gsc/v2/cart.js?mid=#{@cms_config["site_settings"]["google_merchant_id"]}" post-to-sandbox="#{RAILS_ENV=="development"}" currency="USD"></script>
 = render :partial => "sidecolumn2"
 %h1
   Products
 %ul.product-list
-  =render :partial => "product", :collection => @products
+  =render :partial => "product", :collection => @products.collect{|p| p.active ? p : ""}
