--- a/app/views/admin/products/_product_option.html.haml
+++ b/app/views/admin/products/_product_option.html.haml
@@ -5,8 +5,8 @@
       = p.text_field :title
       Price:
       = p.text_field :price, :size => 10
-      Sale price:
-      = p.text_field :sale_price, :size => 10
+      / Sale price:
+      / = p.text_field :sale_price, :size => 10
       Available:
       = p.check_box :available
       = p.hidden_field :delete, {:class => "delete_#{product_option.id}", :value => "false" }
