--- a/app/views/admin/products/edit.html.haml
+++ b/app/views/admin/products/edit.html.haml
@@ -4,6 +4,6 @@
 %p
   = icon "Photo"
   = link_to "Manage images for this product", admin_product_path(@product)
-- form_for :product, :url => admin_product_path(@product), :html => { :method => :put, :onsubmit => "form_submitted()" } do |f|
+- form_for [:admin, @product], :html => { :method => :put, :onsubmit => "form_submitted()" } do |f|
   = render :partial => "form", :locals => { :f => f }
 
