--- a/app/views/product_categories/show.html.haml
+++ b/app/views/product_categories/show.html.haml
@@ -6,5 +6,5 @@
 %h1= @productcategory.name
 = @productcategory.body
 %ul.product-list
-  -@productcategory.products.each do |p|
+  -@products.each do |p|
     = render :partial => "/products/product", :locals => { :product => p }
