--- a/app/views/admin/products/_form.html.haml
+++ b/app/views/admin/products/_form.html.haml
@@ -27,6 +27,15 @@
       = f.label :blurb
     %dd.form-option
       = f.text_area :blurb, :size => "50x5"
+    -if @product.images.any? || @product.testimonials.any?
+      %dt.form-label
+      %dd.options
+        - unless @product.images.empty?
+          = render :partial => "admin/shared/image_options", :locals => {:images => @product.images}
+        - unless @product.testimonials.empty?
+          = render :partial => "admin/testimonials/testimonial_options", :locals => {:testimonials => @page.testimonials}
+    %br
+    %br
     %dt.form-label
       = f.label :description
     %dd.form-option
