fixed testimonial reference in admin product form

--- a/app/views/admin/products/_form.html.haml
+++ b/app/views/admin/products/_form.html.haml
@@ -33,7 +33,7 @@
         - unless @product.images.empty?
           = render :partial => "admin/shared/image_options", :locals => {:images => @product.images}
         - unless @product.testimonials.empty?
-          = render :partial => "admin/testimonials/testimonial_options", :locals => {:testimonials => @page.testimonials}
+          = render :partial => "admin/testimonials/testimonial_options", :locals => {:testimonials => @product.testimonials}
     %br
     %br
     %dt.form-label
