modifications to products and product categories index to fix formatting

--- a/app/views/products/index.html.haml
+++ b/app/views/products/index.html.haml
@@ -7,5 +7,7 @@
 = render :partial => "sidecolumn2"
 %h1
   Products
-%ul.product-list
-  =render :partial => "product", :collection => @products.collect{|p| p.active ? p : ""}
+%div{:style => "float: left;"}
+  %ul.product-list
+    =render :partial => "product", :collection => @products.collect{|p| p.active ? p : ""}
+  = clear
