--- a/app/views/product_categories/show.html.haml
+++ b/app/views/product_categories/show.html.haml
@@ -5,6 +5,8 @@
 = render :partial => "products/sidecolumn2"
 %h1= @productcategory.name
 = @productcategory.body
-%ul.product-list
-  -@products.each do |p|
-    = render :partial => "/products/product", :locals => { :product => p }
+%div{:style => "float: left;"}
+  %ul.product-list
+    -@products.each do |p|
+      = render :partial => "/products/product", :locals => { :product => p }
+  = clear
