--- a/app/views/products/show.html.haml
+++ b/app/views/products/show.html.haml
@@ -15,27 +15,29 @@
 #pricing
   %div{:class => "add-to-cart product"}
     = hidden_field_tag "product-title", @product.title, {:class => "product-title"}
-    = hidden_field_tag "product-attr-option", @product.product_options[0].title ? @product.product_options[0].title : nil, {:class => "product-attr-option"}
+    - unless product.product_options.empty?
+      = hidden_field_tag "product-attr-option", @product.product_options[0].title ? @product.product_options[0].title : nil, {:class => "product-attr-option"}
     = "Product SKU: #{@product.sku}<br />" unless @product.sku.blank?
     = "Weight: #{@product} <br />" unless @product.weight.blank?
     -if @product.weight
       %input.product-weight{:type=>"hidden", :value=>"#{@product.weight}"}
     %br
-    -if !@product.product_options.reject{|x| !x.available}.empty?
-      = hidden_field_tag "product-price", number_to_currency(@product.product_options[0].price), {:class => "product-price"}
-      -if @product.product_options.count > 1
-        .options_box
-          - @product.product_options.each_with_index do |po, x|
-            -if po.available
-              =radio_button_tag ("product_options", po.id, x == 0 ? true : false, {:onclick => "option_switch(#{po.price}, \"#{po.title}\")"})
-              =label_tag "product_options_#{po.id}", "#{po.title}&mdash;#{number_to_currency(po.price, :unit => "$")}"
-              %br
-      -else
-        = number_to_currency(@product.product_options[0].price)
-      - if !@product.cart_code.blank?
-        = @product.cart_code
-      - elsif @cms_config["site_settings"]["google_merchant_id"] and @product.display_add_cart and !@product.product_options.reject{|po| po.price == "" }.empty?
-        %div.googlecart-add-button{:role=>"button", :alt=>"Add to cart", :tabindex=>"0", :style => "position: relative;"}
+    - unless product.product_options.empty?
+      -if !@product.product_options.reject{|x| !x.available}.empty?
+        = hidden_field_tag "product-price", number_to_currency(@product.product_options[0].price), {:class => "product-price"}
+        -if @product.product_options.count > 1
+          .options_box
+            - @product.product_options.each_with_index do |po, x|
+              -if po.available
+                =radio_button_tag ("product_options", po.id, x == 0 ? true : false, {:onclick => "option_switch(#{po.price}, \"#{po.title}\")"})
+                =label_tag "product_options_#{po.id}", "#{po.title}&mdash;#{number_to_currency(po.price, :unit => "$")}"
+                %br
+        -else
+          = number_to_currency(@product.product_options[0].price)
+        - if !@product.cart_code.blank?
+          = @product.cart_code
+        - elsif @cms_config["site_settings"]["google_merchant_id"] and @product.display_add_cart and !@product.product_options.reject{|po| po.price == "" }.empty?
+          %div.googlecart-add-button{:role=>"button", :alt=>"Add to cart", :tabindex=>"0", :style => "position: relative;"}
     
 %h2
   Description
