--- a/app/views/products/index.html.haml
+++ b/app/views/products/index.html.haml
@@ -3,7 +3,7 @@
 -if @cms_config["site_settings"]["google_merchant_id"]
   /Add this line to the script tag to enable sandbox testing
   - content_for :footer do
-    ==<script id="googlecart-script" type="text/javascript" src="http://checkout.google.com/seller/gsc/v2/cart.js?mid=#{@cms_config["site_settings"]["google_merchant_id"]}" post-to-sandbox="#{RAILS_ENV=="development"}" currency="USD"></script>
+    ==<script id="googlecart-script" type="text/javascript" src="http://checkout.google.com/seller/gsc/v2/cart.js?mid=#{@cms_config["site_settings"]["google_merchant_id"]}" post-to-sandbox="#{RAILS_ENV=="development"}" currency="USD" hide-cart-when-empty="true"></script>
 = render :partial => "sidecolumn2"
 %h1
   = @cms_config['site_settings']['products_title'] ? @cms_config['site_settings']['products_title'] : "Products"
