--- a/app/views/products/show.html.haml
+++ b/app/views/products/show.html.haml
@@ -8,7 +8,7 @@
     ==<script type='text/javascript'>function option_switch (price, option) {if(price != ''){jQuery('.product-price').val(price);}jQuery('.product-attr-option').val(option); return false;}</script>
 
   - content_for :footer do
-    ==<script id="googlecart-script" type="text/javascript" src="http://checkout.google.com/seller/gsc/v2/cart.js?mid=#{@cms_config["site_settings"]["google_merchant_id"]}" post-to-sandbox="#{RAILS_ENV=="development"}" currency="USD"></script>
+    ==<script id="googlecart-script" type="text/javascript" src="http://checkout.google.com/seller/gsc/v2/cart.js?mid=#{@cms_config["site_settings"]["google_merchant_id"]}" post-to-sandbox="#{RAILS_ENV=="development"}" currency="USD"  hide-cart-when-empty="true"></script>
 
 %h1= @product.title
 = render :partial => "/shared/image_box", :locals => { :owner => @product } unless @product.images.empty?
