added simple product layout format

--- a/app/views/products/show.html.haml
+++ b/app/views/products/show.html.haml
@@ -58,3 +58,4 @@
 - unless @testimonial.blank?
   = render :partial => "sidecolumn"
   /= render :partial => "sidecolumn2"
+= render :partial => "sidecolumn2"
