adding hidden fields to disable sidecolumn2 and display sidecolumn1

--- a/app/views/products/index.html.haml
+++ b/app/views/products/index.html.haml
@@ -4,7 +4,11 @@
   /Add this line to the script tag to enable sandbox testing
   - content_for :footer do
     ==<script id="googlecart-script" type="text/javascript" src="http://checkout.google.com/seller/gsc/v2/cart.js?mid=#{@cms_config["site_settings"]["google_merchant_id"]}" post-to-sandbox="#{RAILS_ENV=="development"}" currency="USD" hide-cart-when-empty="true"></script>
-= render :partial => "sidecolumn2"
+    
+- if @side_column_sections
+  = render :partial => "shared/side_column"
+- unless @cms_config['site_settings']['hide_products_list']
+  = render :partial => "sidecolumn2"
 %h1
   = @cms_config['site_settings']['products_title'] ? @cms_config['site_settings']['products_title'] : "Products"
 %div{:style => "float: left;"}
