--- a/app/views/product_categories/show.html.haml
+++ b/app/views/product_categories/show.html.haml
@@ -2,7 +2,10 @@
   = @productcategory.name
 - content_for(:meta_description) do
   = @productcategory.description
-= render :partial => "products/sidecolumn2"
+- if @side_column_sections
+  = render :partial => "shared/side_column"
+- unless @cms_config['site_settings']['hide_products_list']
+  = render :partial => "sidecolumn2"
 %h1= @productcategory.name
 = @productcategory.body
 %div{:style => "float: left;"}
