--- a/app/views/admin/products/index.html.haml
+++ b/app/views/admin/products/index.html.haml
@@ -14,12 +14,13 @@
         = icon "Dots Down", admin_product_categories_path
         = link_to "View Product Categories", admin_product_categories_path
   
-  / - if @cms_config['modules']['store']
-  /   = icon "Mail", admin_shipping_methods_path
-  /   = link_to "View Shipping Methods", admin_shipping_methods_path
-  / 
-  / = icon "Percent", admin_locations_path
-  / = link_to "Change Tax Rates", admin_locations_path
+%ul.alphabet
+  - ("a".."z").each do |letter|
+    - if params[:letter] and params[:letter] == letter
+      %li.selected= letter.capitalize
+    - else
+      %li= link_to(letter.capitalize, "/admin/products?letter=#{letter}")
+= clear
 
 - unless @products.total_pages == 1
   = will_paginate @products
