--- a/app/views/products/_related_products_for_slice.html.haml
+++ b/app/views/products/_related_products_for_slice.html.haml
@@ -1,5 +1,5 @@
 - unless @product.related_products.blank?
-  %h2= title
+  %h2= section.title
   %ul
     - for product in @product.related_products
       %li= link_to(product.name, product_path(product))
