--- a/app/views/products/_related_products_for_slice.html.haml
+++ b/app/views/products/_related_products_for_slice.html.haml
@@ -1,5 +1,16 @@
 - unless @product.related_products.blank?
   %h2= section.title
-  %ul
+  %ul{:class => section.section_format.blank? ? "related-products-concise" : (section.section_format == "small" ? "related-products-small" : "related-products-detailed")}
     - for product in @product.related_products
-      %li= link_to(product.name, product_path(product))
+      %li
+        - if section.section_format == "small"
+          = link_to(image_tag(product.images.first.small_thumbnail, :alt => product.name, :title => product.name), product_path(product), :class => "related-product-thumb")
+          = link_to(product.name, product_path(product), :class => "related-product-title")
+        - elsif section.section_format == "detailed"
+          = link_to(image_tag(product.images.first.small_thumbnail, :alt => product.name, :title => product.name), product_path(product), :class => "related-product-thumb")
+          = link_to(product.name, product_path(product), :class => "related-product-title")
+          - if !@product.product_options.empty? and !@product.product_options[0].price.blank?          
+            .related-product-price
+              = number_to_currency(@product.product_options[0].price)
+        - else
+          = link_to(product.name, product_path(product))
