--- a/app/views/products/_related_products_for_slice.html.haml
+++ b/app/views/products/_related_products_for_slice.html.haml
@@ -4,10 +4,10 @@
     - for product in @product.related_products
       %li
         - if section.section_format == "small"
-          = link_to(image_tag(product.images.first.small_thumbnail, :alt => product.name, :title => product.name), product_path(product), :class => "related-product-thumb")
+          = link_to(image_tag(product.images.first.thumbnail, :alt => product.name, :title => product.name), product_path(product), :class => "related-product-thumb")
           = link_to(product.name, product_path(product), :class => "related-product-title")
         - elsif section.section_format == "detailed"
-          = link_to(image_tag(product.images.first.small_thumbnail, :alt => product.name, :title => product.name), product_path(product), :class => "related-product-thumb")
+          = link_to(image_tag(product.images.first.thumbnail, :alt => product.name, :title => product.name), product_path(product), :class => "related-product-thumb")
           = link_to(product.name, product_path(product), :class => "related-product-title")
           - if !@product.product_options.empty? and !@product.product_options[0].price.blank?          
             .related-product-price
