--- a/app/views/products/_product.html.haml
+++ b/app/views/products/_product.html.haml
@@ -1,6 +1,6 @@
 %li.product
   - unless product.images.blank? 
-    =link_to image_tag(product.images.first.image.url(:medium), :title => product.title, :alt => product.title), product, :class => "product-image"
+    =link_to image_tag(product.images.first.thumbnail, :title => product.title, :alt => product.title), product, :class => "product-image"
 
   %h2=link_to product.name, product
   - unless product.product_options.empty?
