adding product pricing format options

--- a/app/views/products/_product_pricing_for_slice.html.haml
+++ b/app/views/products/_product_pricing_for_slice.html.haml
@@ -1,4 +1,4 @@
-- if section.section_format == ""
+- if section.section_format == "" or section.section_format == nil
   #pricing
     %div{:class => "add-to-cart product"}
       = hidden_field_tag "product-title", @product.title, {:class => "product-title"}
